--- a/style.css
+++ b/style.css
@@ -11,12 +11,11 @@
   * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   }
   
   body {
-    background-color: var(--bg-color);
+    background-color: rgb(20, 20, 20);
     color: var(--text-color);
     min-height: 100vh;
     display: flex;
@@ -25,13 +24,11 @@
     justify-content: center;
     padding: 20px;
   }
-  
-  
-  
+     
   h1 {
     text-align: center;
     margin-bottom: 20px;
-    color: var(--accent-color);
+    color: rgb(4, 201, 4)
   }
 
   h1:hover {
@@ -61,24 +58,31 @@
   
   button {
     width: 20%;
-    padding: 14px;
+    padding: 8px;
     background-color: green;
     color: white;
     border: none;
     border-radius: var(--border-radius);
-    font-size: 12px;
+    font-size: 6px;
     font-weight: 600;
     cursor: pointer;
     transition: background-color 0.3s;
     margin-top: 8px;
+    font-size: small;    
   }
 
   button:hover {
     background-color: #4efd7a;
+    color: black;
   }
   
   li {
-    width: 100%;
-    margin-right: 16px;
+    width: 80%; */
+    /* margin-right: 8px; */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 24px;
+    
+
   }
+
   
